--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
@@ -61,5 +62,4 @@ dependencies {
 
     // Recycler view
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
-
 }
