--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,9 +20,7 @@
         <service
             android:name=".services.MyService"
             android:enabled="true"
-            android:exported="false"
-            />
-
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
