--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <uses-permission android:name="com.borlanddev.natife_first.PRIVATE" />
 
     <application
-        android:name=".NatifeFirstApplication"
+        android:name=".helpers.NatifeFirstApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
